# rc-recinfo

./: .gitignore  README.md  build_index.py  build_index_v2.py  download.sh  evaluate.py  ltr_pipeline.py  ltr_pipeline_v2.py  ltr_pipeline_v3.py  ltr_pipeline_v3_bge_m3.py  ltr_pipeline_v3_qwen4b.py  make_submission.py  pyproject.toml  requirements.txt  requirements_bge_m3.txt  run_v3_experiments.sh  sync_bge_m3_to_remote.sh
configs/: submission_01.yaml  submission_02.yaml  submission_03.yaml  submission_04.yaml  submission_05.yaml
package/src/: README_REPRODUCE.md
package/src/common/: build_index.py  build_index_v2.py  ltr_pipeline_v2.py  ltr_pipeline_v3.py  ltr_pipeline_v3_qwen4b.py  make_submission.py
package/src/runs/: generate_baseline.sh  generate_ltr_v2_k1000.sh  generate_ltr_v3_cross.sh  generate_ltr_v3_dense.sh  generate_ltr_v3_qwen4b.sh
package/submissions/: submission.csv  submission_ltr_v2_k1000.csv  submission_ltr_v3_cross.csv  submission_ltr_v3_dense.csv  submission_ltr_v3_qwen4b.csv
src/rcsearch/: __init__.py  cli.py  config.py  data.py  eval.py  export.py  features.py  grid.py  index.py  metadata.py  rerank.py  retrieve.py
tests/: test_eval_export.py
