[project]
name = "rcsearch"
version = "0.1.0"
description = "Progressive entity search pipeline for the IR research challenge."
requires-python = ">=3.14"
dependencies = [
    "PyYAML>=6.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
ltr = [
    "lightgbm",
    "xgboost",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
